# iMAGE

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: build-android.yml  build-ios.yml  build-test-ios.yml  test.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  ec2.rs  github.rs  lib.rs  main.rs  ssh.rs  storage.rs  utils.rs
src/components/: AlbumCard.vue  GithubIcon.vue  MediaCard.vue
src/router/: index.ts
src/stores/: connection.test.ts  connection.ts
src/views/: AlbumView.vue  GalleryView.vue  LoginView.vue  ViewerView.vue  views.test.ts
