[package]
name = "iMAGE"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "image_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
base64 = "0.21"
# Vendored OpenSSL for cross-compilation support
openssl = { version = "0.10", features = ["vendored"] }
# Vendored libz for SSH2 compression support on iOS
libz-sys = { version = "1.1", features = ["static"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
