[package]
name = "iMAGE"
version = "1.0.0"
description = "A Tauri App for browsing files from EC2 or GitHub repositories"
authors = ["you"]
edition = "2021"

[lib]
name = "image_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
base64 = "0.21"
openssl = { version = "0.10", features = ["vendored"] }
libz-sys = { version = "1.1", features = ["static"] }
image = "0.25"
shell-escape = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
